--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.6.4",
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.13.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-validation": "^3.0.7",
