--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.0",
     "dateformat": "^4.5.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^16.13.1",
     "react-big-calendar": "^0.36.0",
     "react-bootstrap": "^1.6.4",
