--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react": "^16.13.1",
     "react-big-calendar": "^0.36.0",
     "react-bootstrap": "^1.6.4",
-    "react-datepicker": "^4.5.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^16.13.1",
+    "react-image-file-resizer": "^0.4.8",
+    "react-images-upload": "^1.2.8",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-validation": "^3.0.7",
     "save": "^2.4.0",
     "validator": "^13.7.0"
