Adding Categories Component, Images for authors

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.5.0",
     "dateformat": "^4.5.1",
+    "form-data": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-big-calendar": "^0.36.0",
     "react-bootstrap": "^1.6.4",
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.13.1",
+    "react-image-file-resizer": "^0.4.8",
+    "react-images-upload": "^1.2.8",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-validation": "^3.0.7",
