--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dentalClinic",
   "version": "0.1.0",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -14,19 +15,22 @@
     "form-data": "^4.0.0",
     "moment": "^2.29.1",
     "multer": "^1.4.5-lts.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-big-calendar": "^0.36.0",
     "react-bootstrap": "^1.6.4",
+    "react-bootstrap-pagination-control": "^1.0.5",
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.4.8",
     "react-images-upload": "^1.2.8",
+    "react-pagination-bar": "^2.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-validation": "^3.0.7",
     "save": "^2.4.0",
+    "sweetpagination": "^1.0.15",
     "validator": "^13.7.0"
   },
   "scripts": {
