Added files for analytics and pagination

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.4",
     "bootstrap": "^4.5.0",
+    "chart.js": "^4.3.0",
     "dateformat": "^4.5.1",
     "form-data": "^4.0.0",
     "moment": "^2.29.1",
@@ -17,14 +18,16 @@
     "react": "^16.13.1",
     "react-big-calendar": "^0.36.0",
     "react-bootstrap": "^1.6.4",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.4.8",
     "react-images-upload": "^1.2.8",
+    "react-js-pagination": "^3.0.3",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-validation": "^3.0.7",
     "save": "^2.4.0",
